# hydra

./: .dockerignore  .gitignore  Cargo.toml  README.md  a.py  docker-compose.yaml  fly.toml
assets/: diagram.xcf
crates/hydra-container/: Cargo.toml
crates/hydra-container/src/: commands.rs  main.rs  pty.rs
crates/hydra-proxy/: Cargo.toml
crates/hydra-proxy/src/: discovery.rs  error_page.rs  handler.rs  main.rs  websocket.rs
crates/hydra-server/: Cargo.toml
crates/hydra-server/src/: app_state.rs  config.rs  container.rs  execute.rs  main.rs  pool.rs  proxy_interface.rs  proxy_websockets.rs  rpc.rs  session.rs  shutdown.rs
crates/hydrad/: Cargo.toml
crates/hydrad/src/: commands.rs  main.rs  procedures.rs  proxy.rs  pty.rs  state.rs
crates/protocol/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  lib.rs  protocol.rs
crates/shared/src/protocol/: messages.rs  mod.rs  proxy.rs  rpc.rs
deploy/: container.dockerfile  fly-proxy.toml  fly-server.toml  hydrad.dockerfile  proxy.dockerfile  server-entrypoint.sh  server.dockerfile
deploy/base/: _meta.json  node18.dockerfile  python3.dockerfile
deploy/base/turtle/: entrypoint.sh  turtle.dockerfile
deploy/k8s/: ingress.yaml
dev/: hydra-development.yml
dev/nginx/: docker-compose.yml
dev/nginx/config/: nginx.conf
dev/playground/: package.json
dev/playground/src/components/: editor.tsx
dev/playground/src/hydra/: protocol.ts  provider.tsx
dev/playground/src/pages/: _app.tsx
dev/playground/src/pages/api/: run.ts  session.ts
dev/test-config/: config.toml
dockerfiles/: entrypoint.sh  vnc.dockerfile
hydra-container/: Cargo.toml  Dockerfile
hydra-container/protocol/: Cargo.toml
hydra-container/protocol/src/: lib.rs  lib.rs~
hydra-container/src/: commands.rs  main.rs  procedures.rs  pty.rs  state.rs
hydra-proxy/: Cargo.toml
hydra-proxy/src/: handler.rs  main.rs  websocket.rs
hydra-server/: Cargo.toml
hydra-server/src/: app_state.rs  config.rs  container.rs  execute.rs  main.rs  pool.rs  proxy_interface.rs  rpc.rs  run_request.rs  session.rs  shutdown.rs
hydra-web-app/: package.json
hydra-web-app/src/: global.css
hydra-web-app/src/components/: editor.tsx  terminal.tsx
hydra-web-app/src/hydra/: protocol.ts  provider.tsx
hydra-web-app/src/pages/: _app.tsx  index.tsx
hydra-web-app/src/pages/api/: run.ts
hydra-web-app/src/types/: tagged-enum.ts
k8s/: api-service.yaml  configmap.yaml  deployment.yaml  secret.yaml  test-pod.yaml
scripts/: build-container.sh  build-hydrad.sh  build.sh  cache.py  container.dockerfile  dev.py  dev.sh  hydra-development.yml  run.py  server-entrypoint.sh  server.dockerfile  utils.py
shared/: Cargo.toml
shared/src/: lib.rs  prelude.rs
test-config/: config.toml
