[package]
name = "hydra-container"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
env_logger = "0.10.0"
futures-util = "0.3.26"
log = "0.4.17"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
protocol = { path = "./protocol" }
rmp-serde = "1.1.1"
pty-process = { version = "0.2.0", features = ["tokio", "backend-tokio"] }
async-stream = "0.3.3"
parking_lot = "0.12.1"
portable-pty = "0.7.0"

