[package]
name = "hydra-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["ws", "macros"] }
dotenv = "0.15.0"
futures-util = "0.3.26"
log = "0.4.17"
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = "0.18.0"
parking_lot = "0.12.1"
tower-http = { version = "0.3.5", features = ["cors"] }
pretty_env_logger = "0.4.0"
redis = { version = "0.23.0", features = ["tokio", "tokio-comp"] }
tower = "0.4.13"
reqwest = "0.11.18"
hyper = "0.14.27"
sha1 = "0.10.5"
base64 = "0.21.2"
color-eyre = "0.6.2"
shared = { path = "../shared" }
