[package]
name = "hydra-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["ws", "macros"] }
dotenv = "0.15.0"
futures-util = "0.3.26"
log = "0.4.17"
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = "0.20.0"
parking_lot = "0.12.1"
tower-http = { version = "0.3.5", features = ["cors"] }
pretty_env_logger = "0.4.0"
redis = { version = "0.23.0", features = [
    "tokio",
    "tokio-comp",
    "tokio-rustls-comp",
] }
tower = "0.4.13"
reqwest = { version = "0.11.18", features = [
    "json",
    "rustls-tls",
], default-features = false }
hyper = "0.14.27"
sha1 = "0.10.5"
base64 = "0.21.2"
color-eyre = "0.6.2"
shared = { path = "../shared" }
lru = "0.11.0"
uuid = { version = "1.4.1", features = ["v4"] }
http = "0.2.9"
serde = { version = "1.0.152", features = ["serde_derive", "rc"] }
