[package]
name = "hydra-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["ws", "macros"] }
bollard = "0.14.0"
dotenv = "0.15.0"
futures-util = "0.3.26"
log = "0.4.17"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.93"
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = "0.20.0"
lazy_static = "1.4.0"
uuid = { version = "1.3.0", features = ["v4"] }
rmp-serde = "1.1.1"
parking_lot = "0.12.1"
tower-http = { version = "0.3.5", features = ["cors"] }
console-subscriber = "0.1.9"
pretty_env_logger = "0.4.0"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
serde-humanize-rs = "0.1.1"
toml = "0.7.5"
redis = { version = "0.23.0", features = ["tokio", "tokio-comp"] }
shared = { path = "../shared" }
color-eyre = "0.6.2"
