[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["ws"] }
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.93"
color-eyre = "0.6.2"
uuid = { version = "1.4.1", features = ["serde"] }
tokio-tungstenite = "0.20.0"
